--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+.heading-font {
+  font-family: 'Lobster';
+  font-size: 72px;
+  color: #0ccac4;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
